IN-38: fix: Header z-index, add comments to SignUpForm, add isSubmitting for disable, remove OAuth buttons

--- a/src/features/auth/ui/sign-up/OAuthButtons/OAuthButtons.module.scss
+++ b/src/features/auth/ui/sign-up/OAuthButtons/OAuthButtons.module.scss
@@ -4,12 +4,3 @@
   gap: 60px;
   margin-bottom: 24px;
 }
-
-.oauthButton {
-  background: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: all 0.2s ease;
-}
